# secrets4

./: Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: design.md
src/: audit.rs  lib.rs  main.rs  paths.rs  ttl.rs
src/cache/: atomic.rs  format.rs  mod.rs
src/cli/: grant.rs  list.rs  mod.rs  prune.rs  revoke.rs  rotate_key.rs  run.rs  status.rs  view.rs
src/crypto/: aead.rs  mod.rs  rand.rs
src/injection/: mod.rs  parser.rs  redact.rs  rewriter.rs  spawn.rs
