[package]
name = "secrets4"
version = "0.1.0-dev"
edition = "2021"
rust-version = "1.78"
description = "AI-safe local secret vault. Successor to scrt4."
license = "MIT"

[[bin]]
name = "secrets4"
path = "src/main.rs"

[lib]
name = "secrets4"
path = "src/lib.rs"

[dependencies]
# Crypto
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
subtle = "2.6"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ml-kem = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
ciborium = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }
rpassword = "7"

# OS / FS
nix = { version = "0.29", features = ["fs", "process", "signal", "user", "socket", "mman", "uio"] }
directories = "5"

# Errors
anyhow = "1"
thiserror = "1"

# Misc
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
assert_cmd = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
